# server/DataAccess/Entities/Board.cs
@@ -11,13 +11,15 @@ public partial class Board
 
     public Guid Gameid { get; set; }
 
-    public int? Chosennumbers { get; set; }
+    public List<int> Chosennumbers { get; set; } = null!;
 
     public bool Iswinningboard { get; set; }
 
     public decimal Price { get; set; }
 
     public Guid? Repeatingboardid { get; set; }
+
+    public bool Isdeleted { get; set; }
 
     public virtual Game Game { get; set; } = null!;
 
